manifests/kuard-config.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-with-config
spec:
  containers:
    - name: test-container
      image: 105926288004.dkr.ecr.eu-central-1.amazonaws.com/kuard
      imagePullPolicy: Always
      command:
        - "/kuard"
        - "$(EXTRA_PARAM)"
      volumeMounts:
        - name: config-volume
          mountPath: /config
  volumes:
    - name: config-volume
      configMap:
        name: my-config
  restartPolicy: Never
...
