manifests/kuard-impage-pull-secret.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-tls
spec:
  containers:
  - name: kuard-tls
    image: gcr.io/kuar-demo/kuard-amd64:blue
    imagePullPolicy: Always
    volumeMounts:
    - name: tls-certs
      mountPath: /tls
      readOnly: true
  imagePullSecrets:
  - name: my-image-pull-secret
  volumes:
  - name: tls-certs 
    secret:
      secretName: kuard-tls
