manifests/kuard-pod-healthy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - image: 105926288004.dkr.ecr.eu-central-1.amazonaws.com/my_repo:latest
      name: kuard
      livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
