manifests/kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - image: 105926288004.dkr.ecr.eu-central-1.amazonaws.com/my_repo:latest
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
