manifests/kuard-secret-volume.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard-tls
spec:
  containers:
  - name: kuard-tls
    image: 105926288004.dkr.ecr.eu-central-1.amazonaws.com/kuard:latest
    imagePullPolicy: Always
    volumeMounts:
    - name: tls-certs
      mountPath: /tls
      readOnly: true
  volumes:
  - name: tls-certs 
    secret:
      secretName: kuard-tls
