manifests/kuard-volumes.yaml

apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  volumes:
    - name: "kuard-data"
      hostPath:
          path: "/var/lib/kuard"

  containers:
    - image: 105926288004.dkr.ecr.eu-central-1.amazonaws.com/my_repo:latest
      name: kuard
      volumeMounts:
        - mountPath: "/data"
          name: "kuard-data"
      resources:
        requests:
          cpu: "500m"
          memory: "128Mi"
        limits:
          cpu: "1000m"
          memory: "256Mi"

      livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3

      readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3

      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
