manifests/nginx-fast-storage.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-fast-storage
  labels:
    ssd: "true"
    app: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
        ssd: "true"
    spec:
      nodeSelector:
        ssd: "true"
      containers:
        - name: nginx
          image: nginx:latest

...
