manifests/kuard-path-ingress.yaml
# create ingress to route traffic based on requested path
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules: 
  - host: bandicoot.selle.cloud
    http:
      paths:
      - path: "/"
        backend:
            serviceName: bandicoot
            servicePort: 8080
      - path: "/a"
        backend:
            serviceName: alpaca
            servicePort: 8080
